--- a/src/webapp/index.html
+++ b/src/webapp/index.html
@@ -1,3 +1,8 @@
 <meta charset="UTF-8">
 
-<h1>JSP 프로젝트</h1>
+<h1>메인 페이지</h1>
+
+<script>
+    // location.href = '/usr/article/list/free';
+    location.replace('/usr/article/list/free');
+</script>
